--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
   *{
-    font-family: 'Roboto', sans-serif;
+    font-family:  "Janna LT", 'Roboto', sans-serif;
   }
 
 
